--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "framer-motion": "^1.11.1",
-    "gatsby": "^2.21.24",
+    "gatsby": "^2.25.0",
     "gatsby-image": "^2.2.39",
+    "gatsby-link": "^2.9.0",
     "gatsby-plugin-bugherd": "^1.0.2",
     "gatsby-plugin-emotion": "^4.3.0",
     "gatsby-plugin-facebook-pixel": "^1.0.3",
@@ -41,6 +42,7 @@
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.0.35",
+    "gatsby-react-router-scroll": "^3.5.0",
     "gatsby-remark-copy-linked-files": "^2.1.3",
     "gatsby-remark-images": "^3.1.0",
     "gatsby-remark-lazy-load": "^1.0.2",
