fix incorrect tiles in cms config

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -72,7 +72,7 @@ collections:
 
 
   - name: galleries
-    label: Articles
+    label: Galleries
     create: true
     preview_path: /gallery/{{slug}}
     editor:
