--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gatsby-plugin-netlify": "^2.9.0",
     "gatsby-plugin-netlify-cms": "^4.0.0",
     "gatsby-plugin-netlify-functions": "^0.0.3",
+    "gatsby-plugin-netlify-headers": "^1.0.1",
     "gatsby-plugin-offline": "^3.8.0",
     "gatsby-plugin-postcss": "^2.0.7",
     "gatsby-plugin-purgecss": "^4.0.1",
